# aoc-2023

./: pyproject.toml
src/aoc/: day1.py
tests/: day1_test.py
