[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = "Advent of Code, 2023"
authors = ["Krishnan M <km@krishnanm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.pytest.ini_options]
pythonpath = "src/"
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
